# MiniRenderer

./: .gitignore  CMakeLists.txt  Config.h.in  README.md
src/Core/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  LineRenderer.h  Maths.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  TriangleRenderer.h  Window.h
src/Core/Events/: Event.h  EventHandler.cpp  EventHandler.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/Core/Maths/: Maths.h  Matrix.h  Vector.h
src/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
